# CTicTacToe

./: .gitignore  CMakeLists.txt
include/components/: board.h  tile.h
include/utils/: funcs.h  params.h
src/: main.c
src/entities/: board.c  tile.c
src/utils/: funcs.c
